--- a/backend/Epp_BackEnd.ini
+++ b/backend/Epp_BackEnd.ini
@@ -1,5 +1,6 @@
 [uwsgi]
 socket = 0.0.0.0:8000
+buffer-size=32768
 chdir = /home/root/EPP/Epp_BackEnd/backend
 wsgi-file =/home/root/EPP/Epp_BackEnd/backend/backend/wsgi.py
 pidfile = /home/root/EPP/Epp_BackEnd/backend/uwsgi_blog.pid
