--- a/backend/Epp_BackEnd.ini
+++ b/backend/Epp_BackEnd.ini
@@ -2,7 +2,8 @@
 socket = 0.0.0.0:8000
 buffer-size=32768
 chdir = /home/root/EPP/Epp_BackEnd/backend
-wsgi-file =/home/root/EPP/Epp_BackEnd/backend/backend/wsgi.py
+module=backend.wsgi:application
+master=True
 pidfile = /home/root/EPP/Epp_BackEnd/backend/uwsgi_blog.pid
 touch-reload = /home/root/EPP/Epp_BackEnd/backend/uwsgi_blog.pid
 processes = 1
