--- a/backend/Epp_BackEnd.ini
+++ b/backend/Epp_BackEnd.ini
@@ -1,5 +1,5 @@
 [uwsgi]
-socket = 0.0.0.0:8000
+http = 0.0.0.0:8000
 buffer-size=65535
 chdir = /home/root/EPP/Epp_BackEnd/backend
 module=backend.wsgi:application
