--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -51,6 +51,8 @@ six==1.16.0
 sniffio==1.3.1
 sqlparse==0.4.4
 tqdm==4.66.2
+torch==2.0.0
+transformers==4.39.2
 typing_extensions==4.11.0
 tzdata==2024.1
 ujson==5.9.0
