修改uwsgi超时配置

--- a/backend/Epp_BackEnd.ini
+++ b/backend/Epp_BackEnd.ini
@@ -1,5 +1,7 @@
 [uwsgi]
 socket = 127.0.0.1:8000
+socket-timeout = 3600
+harakiri = 3600
 buffer-size=65535
 chdir = /home/root/EPP/Epp_BackEnd/backend
 module=backend.wsgi:application
