--- a/backend/Epp_BackEnd.ini
+++ b/backend/Epp_BackEnd.ini
@@ -2,14 +2,19 @@
 socket = 127.0.0.1:8000
 socket-timeout = 3600
 harakiri = 3600
-buffer-size=65535
+buffer-size = 65535
+max-requests = 1000
+async = 100
+coroae = 100
 chdir = /home/root/EPP/Epp_BackEnd/backend
-module=backend.wsgi:application
-master=True
+module = backend.wsgi:application
+master = True
+reload-on-rss = 512
+reload-on-as = 1024
 pidfile = /home/root/EPP/Epp_BackEnd/backend/uwsgi_blog.pid
 touch-reload = /home/root/EPP/Epp_BackEnd/backend/uwsgi_blog.pid
 processes = 1
-workers= 2
-threads = 2
+workers= 4
+threads = 4
 daemonize = /home/root/EPP/Epp_BackEnd/backend/log/uwsgi_blog.log
 py-autoreload = 1  # 代码修改后自动重启
