--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -16,13 +16,17 @@ colorama==0.4.6
 cryptography==42.0.5
 distro==1.9.0
 Django==4.2.11
+django-common-helpers==0.9.2
 django-cors-headers==4.3.1
+django-cron==0.5.0
+django-crontab==0.7.1
 environs==9.5.0
 exceptiongroup==1.2.1
 faiss-cpu==1.8.0
 filelock==3.13.4
 frozenlist==1.4.1
 fsspec==2024.3.1
+GPUtil==1.4.0
 grpcio==1.60.0
 h11==0.14.0
 httpcore==1.0.5
@@ -47,6 +51,7 @@ pandas==2.2.2
 pdfkit==0.6.1
 pillow==10.3.0
 protobuf==5.26.1
+psutil==5.9.8
 pyarrow==15.0.2
 pycparser==2.22
 pycryptodome==3.20.0
@@ -77,5 +82,3 @@ ujson==5.9.0
 urllib3==2.2.1
 yarl==1.9.4
 zipp==3.18.1
-django-crontab==0.7.1
-django_cron==0.5.0
